Fixed collapse icon in filter careers #305

--- a/app/assets/stylesheets/module/_filter-careers.scss
+++ b/app/assets/stylesheets/module/_filter-careers.scss
@@ -163,14 +163,23 @@
   border-bottom: rem(1) solid $filter-careers-bg;
 }
 
-.careers-filter__head.careers-icon-collapse-mini {
-  .careers-icon-collapse {
-    @include background-image('careers/minimize.png');
-  }
+// .careers-filter__head.careers-icon-collapse-mini {
+//   .careers-icon-collapse {
+//     @include background-image('careers/minimize.png');
+//   }
+// }
+
+// .careers-filter__head.careers-icon-collapse-expend {
+//   .careers-icon-collapse {
+//     @include background-image('careers/expand.png');
+//   }
+// }
+
+.careers-icon-collapse-expend {
+  @include background-image('careers/expand.png');
 }
 
-.careers-filter__head.careers-icon-collapse-expend {
-  .careers-icon-collapse {
-    @include background-image('careers/expand.png');
-  }
+.careers-icon-collapse-mini {
+  display: none;
+  @include background-image('careers/minimize.png');
 }
